parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> MAIN_PROGRAM
Rule 1     empty -> <empty>
Rule 2     MAIN_PROGRAM -> STRUCTURES
Rule 3     STRUCTURES -> FOR_LOOP STRUCTURES
Rule 4     STRUCTURES -> DO_WHILE_LOOP STRUCTURES
Rule 5     STRUCTURES -> WHILE_LOOP STRUCTURES
Rule 6     STRUCTURES -> ELSE_CONDITIONAL STRUCTURES
Rule 7     STRUCTURES -> IF_CONDITIONAL STRUCTURES
Rule 8     STRUCTURES -> OUTPUT STRUCTURES
Rule 9     STRUCTURES -> INPUT STRUCTURES
Rule 10    STRUCTURES -> VAR STRUCTURES
Rule 11    STRUCTURES -> FUNCTION STRUCTURES
Rule 12    STRUCTURES -> empty
Rule 13    VAR -> ID COMMA VAR
Rule 14    VAR -> ID IS_VALUE VALUE
Rule 15    INPUT -> ID COMMA INPUT
Rule 16    INPUT -> ID IS_VALUE READ OPEN_PARENTHESIS CLOSE_PARENTHESIS
Rule 17    OUTPUT -> PRINT OPEN_PARENTHESIS ID CLOSE_PARENTHESIS
Rule 18    IF_CONDITIONAL -> IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES ELSE_CONDITIONAL
Rule 19    IF_CONDITIONAL -> IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
Rule 20    ELSE_CONDITIONAL -> ELSE OPEN_BRACES STRUCTURES CLOSE_BRACES
Rule 21    WHILE_LOOP -> WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
Rule 22    DO_WHILE_LOOP -> DO OPEN_BRACES STRUCTURES CLOSE_BRACES WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS
Rule 23    FOR_LOOP -> FOR OPEN_PARENTHESIS VALUE COLON VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
Rule 24    FUNCTION -> FUNC ID OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
Rule 25    VALUE -> EARITH
Rule 26    VALUE -> ELOGIC
Rule 27    VALUE -> OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS
Rule 28    VALUE -> VAL
Rule 29    EARITH -> VALUE MULOP VALUE
Rule 30    EARITH -> VALUE DIVOP VALUE
Rule 31    EARITH -> VALUE SUMOP VALUE
Rule 32    EARITH -> VALUE SUBOP VALUE
Rule 33    ELOGIC -> VALUE EQ VALUE
Rule 34    ELOGIC -> VALUE NE VALUE
Rule 35    ELOGIC -> VALUE LT VALUE
Rule 36    ELOGIC -> VALUE GT VALUE
Rule 37    ELOGIC -> VALUE LE VALUE
Rule 38    ELOGIC -> VALUE GE VALUE
Rule 39    ELOGIC -> VALUE AND VALUE
Rule 40    ELOGIC -> VALUE OR VALUE

Terminals, with rules where they appear

AND                  : 39
CLOSE_BRACES         : 18 19 20 21 22 23 24
CLOSE_PARENTHESIS    : 16 17 18 19 21 22 23 24 27
COLON                : 23
COMMA                : 13 15
DIVOP                : 30
DO                   : 22
ELSE                 : 20
EQ                   : 33
FOR                  : 23
FUNC                 : 24
GE                   : 38
GT                   : 36
ID                   : 13 14 15 16 17 24
IF                   : 18 19
IS_VALUE             : 14 16
LE                   : 37
LT                   : 35
MULOP                : 29
NE                   : 34
OPEN_BRACES          : 18 19 20 21 22 23 24
OPEN_PARENTHESIS     : 16 17 18 19 21 22 23 24 27
OR                   : 40
PRINT                : 17
READ                 : 16
SUBOP                : 32
SUMOP                : 31
VAL                  : 28
WHILE                : 21 22
error                : 

Nonterminals, with rules where they appear

DO_WHILE_LOOP        : 4
EARITH               : 25
ELOGIC               : 26
ELSE_CONDITIONAL     : 6 18
FOR_LOOP             : 3
FUNCTION             : 11
IF_CONDITIONAL       : 7
INPUT                : 9 15
MAIN_PROGRAM         : 0
OUTPUT               : 8
STRUCTURES           : 2 3 4 5 6 7 8 9 10 11 18 19 20 21 22 23 24
VALUE                : 14 18 19 21 22 23 23 27 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40
VAR                  : 10 13
WHILE_LOOP           : 5
empty                : 12

Parsing method: LALR

state 0

    (0) S' -> . MAIN_PROGRAM
    (2) MAIN_PROGRAM -> . STRUCTURES
    (3) STRUCTURES -> . FOR_LOOP STRUCTURES
    (4) STRUCTURES -> . DO_WHILE_LOOP STRUCTURES
    (5) STRUCTURES -> . WHILE_LOOP STRUCTURES
    (6) STRUCTURES -> . ELSE_CONDITIONAL STRUCTURES
    (7) STRUCTURES -> . IF_CONDITIONAL STRUCTURES
    (8) STRUCTURES -> . OUTPUT STRUCTURES
    (9) STRUCTURES -> . INPUT STRUCTURES
    (10) STRUCTURES -> . VAR STRUCTURES
    (11) STRUCTURES -> . FUNCTION STRUCTURES
    (12) STRUCTURES -> . empty
    (23) FOR_LOOP -> . FOR OPEN_PARENTHESIS VALUE COLON VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (22) DO_WHILE_LOOP -> . DO OPEN_BRACES STRUCTURES CLOSE_BRACES WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS
    (21) WHILE_LOOP -> . WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (20) ELSE_CONDITIONAL -> . ELSE OPEN_BRACES STRUCTURES CLOSE_BRACES
    (18) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES ELSE_CONDITIONAL
    (19) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (17) OUTPUT -> . PRINT OPEN_PARENTHESIS ID CLOSE_PARENTHESIS
    (15) INPUT -> . ID COMMA INPUT
    (16) INPUT -> . ID IS_VALUE READ OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (13) VAR -> . ID COMMA VAR
    (14) VAR -> . ID IS_VALUE VALUE
    (24) FUNCTION -> . FUNC ID OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (1) empty -> .

    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ELSE            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    FUNC            shift and go to state 20
    $end            reduce using rule 1 (empty -> .)

    MAIN_PROGRAM                   shift and go to state 1
    STRUCTURES                     shift and go to state 2
    FOR_LOOP                       shift and go to state 3
    DO_WHILE_LOOP                  shift and go to state 4
    WHILE_LOOP                     shift and go to state 5
    ELSE_CONDITIONAL               shift and go to state 6
    IF_CONDITIONAL                 shift and go to state 7
    OUTPUT                         shift and go to state 8
    INPUT                          shift and go to state 9
    VAR                            shift and go to state 10
    FUNCTION                       shift and go to state 11
    empty                          shift and go to state 12

state 1

    (0) S' -> MAIN_PROGRAM .



state 2

    (2) MAIN_PROGRAM -> STRUCTURES .

    $end            reduce using rule 2 (MAIN_PROGRAM -> STRUCTURES .)


state 3

    (3) STRUCTURES -> FOR_LOOP . STRUCTURES
    (3) STRUCTURES -> . FOR_LOOP STRUCTURES
    (4) STRUCTURES -> . DO_WHILE_LOOP STRUCTURES
    (5) STRUCTURES -> . WHILE_LOOP STRUCTURES
    (6) STRUCTURES -> . ELSE_CONDITIONAL STRUCTURES
    (7) STRUCTURES -> . IF_CONDITIONAL STRUCTURES
    (8) STRUCTURES -> . OUTPUT STRUCTURES
    (9) STRUCTURES -> . INPUT STRUCTURES
    (10) STRUCTURES -> . VAR STRUCTURES
    (11) STRUCTURES -> . FUNCTION STRUCTURES
    (12) STRUCTURES -> . empty
    (23) FOR_LOOP -> . FOR OPEN_PARENTHESIS VALUE COLON VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (22) DO_WHILE_LOOP -> . DO OPEN_BRACES STRUCTURES CLOSE_BRACES WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS
    (21) WHILE_LOOP -> . WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (20) ELSE_CONDITIONAL -> . ELSE OPEN_BRACES STRUCTURES CLOSE_BRACES
    (18) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES ELSE_CONDITIONAL
    (19) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (17) OUTPUT -> . PRINT OPEN_PARENTHESIS ID CLOSE_PARENTHESIS
    (15) INPUT -> . ID COMMA INPUT
    (16) INPUT -> . ID IS_VALUE READ OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (13) VAR -> . ID COMMA VAR
    (14) VAR -> . ID IS_VALUE VALUE
    (24) FUNCTION -> . FUNC ID OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (1) empty -> .

    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ELSE            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    FUNC            shift and go to state 20
    $end            reduce using rule 1 (empty -> .)
    CLOSE_BRACES    reduce using rule 1 (empty -> .)

    FOR_LOOP                       shift and go to state 3
    STRUCTURES                     shift and go to state 21
    DO_WHILE_LOOP                  shift and go to state 4
    WHILE_LOOP                     shift and go to state 5
    ELSE_CONDITIONAL               shift and go to state 6
    IF_CONDITIONAL                 shift and go to state 7
    OUTPUT                         shift and go to state 8
    INPUT                          shift and go to state 9
    VAR                            shift and go to state 10
    FUNCTION                       shift and go to state 11
    empty                          shift and go to state 12

state 4

    (4) STRUCTURES -> DO_WHILE_LOOP . STRUCTURES
    (3) STRUCTURES -> . FOR_LOOP STRUCTURES
    (4) STRUCTURES -> . DO_WHILE_LOOP STRUCTURES
    (5) STRUCTURES -> . WHILE_LOOP STRUCTURES
    (6) STRUCTURES -> . ELSE_CONDITIONAL STRUCTURES
    (7) STRUCTURES -> . IF_CONDITIONAL STRUCTURES
    (8) STRUCTURES -> . OUTPUT STRUCTURES
    (9) STRUCTURES -> . INPUT STRUCTURES
    (10) STRUCTURES -> . VAR STRUCTURES
    (11) STRUCTURES -> . FUNCTION STRUCTURES
    (12) STRUCTURES -> . empty
    (23) FOR_LOOP -> . FOR OPEN_PARENTHESIS VALUE COLON VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (22) DO_WHILE_LOOP -> . DO OPEN_BRACES STRUCTURES CLOSE_BRACES WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS
    (21) WHILE_LOOP -> . WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (20) ELSE_CONDITIONAL -> . ELSE OPEN_BRACES STRUCTURES CLOSE_BRACES
    (18) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES ELSE_CONDITIONAL
    (19) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (17) OUTPUT -> . PRINT OPEN_PARENTHESIS ID CLOSE_PARENTHESIS
    (15) INPUT -> . ID COMMA INPUT
    (16) INPUT -> . ID IS_VALUE READ OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (13) VAR -> . ID COMMA VAR
    (14) VAR -> . ID IS_VALUE VALUE
    (24) FUNCTION -> . FUNC ID OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (1) empty -> .

    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ELSE            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    FUNC            shift and go to state 20
    $end            reduce using rule 1 (empty -> .)
    CLOSE_BRACES    reduce using rule 1 (empty -> .)

    DO_WHILE_LOOP                  shift and go to state 4
    STRUCTURES                     shift and go to state 22
    FOR_LOOP                       shift and go to state 3
    WHILE_LOOP                     shift and go to state 5
    ELSE_CONDITIONAL               shift and go to state 6
    IF_CONDITIONAL                 shift and go to state 7
    OUTPUT                         shift and go to state 8
    INPUT                          shift and go to state 9
    VAR                            shift and go to state 10
    FUNCTION                       shift and go to state 11
    empty                          shift and go to state 12

state 5

    (5) STRUCTURES -> WHILE_LOOP . STRUCTURES
    (3) STRUCTURES -> . FOR_LOOP STRUCTURES
    (4) STRUCTURES -> . DO_WHILE_LOOP STRUCTURES
    (5) STRUCTURES -> . WHILE_LOOP STRUCTURES
    (6) STRUCTURES -> . ELSE_CONDITIONAL STRUCTURES
    (7) STRUCTURES -> . IF_CONDITIONAL STRUCTURES
    (8) STRUCTURES -> . OUTPUT STRUCTURES
    (9) STRUCTURES -> . INPUT STRUCTURES
    (10) STRUCTURES -> . VAR STRUCTURES
    (11) STRUCTURES -> . FUNCTION STRUCTURES
    (12) STRUCTURES -> . empty
    (23) FOR_LOOP -> . FOR OPEN_PARENTHESIS VALUE COLON VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (22) DO_WHILE_LOOP -> . DO OPEN_BRACES STRUCTURES CLOSE_BRACES WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS
    (21) WHILE_LOOP -> . WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (20) ELSE_CONDITIONAL -> . ELSE OPEN_BRACES STRUCTURES CLOSE_BRACES
    (18) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES ELSE_CONDITIONAL
    (19) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (17) OUTPUT -> . PRINT OPEN_PARENTHESIS ID CLOSE_PARENTHESIS
    (15) INPUT -> . ID COMMA INPUT
    (16) INPUT -> . ID IS_VALUE READ OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (13) VAR -> . ID COMMA VAR
    (14) VAR -> . ID IS_VALUE VALUE
    (24) FUNCTION -> . FUNC ID OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (1) empty -> .

    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ELSE            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    FUNC            shift and go to state 20
    $end            reduce using rule 1 (empty -> .)
    CLOSE_BRACES    reduce using rule 1 (empty -> .)

    WHILE_LOOP                     shift and go to state 5
    STRUCTURES                     shift and go to state 23
    FOR_LOOP                       shift and go to state 3
    DO_WHILE_LOOP                  shift and go to state 4
    ELSE_CONDITIONAL               shift and go to state 6
    IF_CONDITIONAL                 shift and go to state 7
    OUTPUT                         shift and go to state 8
    INPUT                          shift and go to state 9
    VAR                            shift and go to state 10
    FUNCTION                       shift and go to state 11
    empty                          shift and go to state 12

state 6

    (6) STRUCTURES -> ELSE_CONDITIONAL . STRUCTURES
    (3) STRUCTURES -> . FOR_LOOP STRUCTURES
    (4) STRUCTURES -> . DO_WHILE_LOOP STRUCTURES
    (5) STRUCTURES -> . WHILE_LOOP STRUCTURES
    (6) STRUCTURES -> . ELSE_CONDITIONAL STRUCTURES
    (7) STRUCTURES -> . IF_CONDITIONAL STRUCTURES
    (8) STRUCTURES -> . OUTPUT STRUCTURES
    (9) STRUCTURES -> . INPUT STRUCTURES
    (10) STRUCTURES -> . VAR STRUCTURES
    (11) STRUCTURES -> . FUNCTION STRUCTURES
    (12) STRUCTURES -> . empty
    (23) FOR_LOOP -> . FOR OPEN_PARENTHESIS VALUE COLON VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (22) DO_WHILE_LOOP -> . DO OPEN_BRACES STRUCTURES CLOSE_BRACES WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS
    (21) WHILE_LOOP -> . WHILE OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (20) ELSE_CONDITIONAL -> . ELSE OPEN_BRACES STRUCTURES CLOSE_BRACES
    (18) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES ELSE_CONDITIONAL
    (19) IF_CONDITIONAL -> . IF OPEN_PARENTHESIS VALUE CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (17) OUTPUT -> . PRINT OPEN_PARENTHESIS ID CLOSE_PARENTHESIS
    (15) INPUT -> . ID COMMA INPUT
    (16) INPUT -> . ID IS_VALUE READ OPEN_PARENTHESIS CLOSE_PARENTHESIS
    (13) VAR -> . ID COMMA VAR
    (14) VAR -> . ID IS_VALUE VALUE
    (24) FUNCTION -> . FUNC ID OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_BRACES STRUCTURES CLOSE_BRACES
    (1) empty -> .

    FOR             shift and go to state 13
    DO              shift and go to state 14
    WHILE           shift and go to state 15
    ELSE            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    FUNC            shift and go to state 20
    $end            reduce using rule 1 (empty -> .)
    CLOSE_BRACES    reduce using rule 1 (empty -> .)
